tests/macro-tests/cases/widget_new/missing_value4.stderr
error: expected `;`
  --> cases/widget_new/missing_value4.rs:14:9
   |
14 |         margin = 0;
   |         ^^^^^^

error[E0061]: this method takes 1 argument but 0 arguments were supplied
  --> cases/widget_new/missing_value4.rs:12:9
   |
11 |       let _ = Wgt! {
   |  _____________-
12 | |         cursor =
   | |         ^^^^^^
13 | |         // we expect these properties to be used.
14 | |         margin = 0;
15 | |         enabled = true;
16 | |     };
   | |_____- argument #1 is missing
   |
note: method defined here
  --> $WORKSPACE/crates/zng-wgt-input/src/misc.rs
   |
   | pub fn cursor(child: impl IntoUiNode, cursor: impl IntoVar<CursorSource>) -> UiNode {
   |        ^^^^^^
help: provide the argument
  --> $WORKSPACE/crates/zng-wgt/src/wgt.rs
   |
   - #[widget($crate::Wgt)]
   + (/* cursor */)
   |
